--- a/Greip/Base.lproj/Main.storyboard
+++ b/Greip/Base.lproj/Main.storyboard
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="HUN-lU-pb1">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -9,7 +11,7 @@
         <!--Navigation Controller-->
         <scene sceneID="1o6-VA-5gX">
             <objects>
-                <navigationController id="HUN-lU-pb1" sceneMemberID="viewController">
+                <navigationController hidesBottomBarWhenPushed="YES" id="HUN-lU-pb1" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="6oF-13-7Qs">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -31,23 +33,29 @@
         <!--DataFeed-->
         <scene sceneID="vcj-Gs-Wnn">
             <objects>
-                <tableViewController title="DataFeed" clearsSelectionOnViewWillAppear="NO" id="IPX-or-gZQ" customClass="FeedTableController" sceneMemberID="viewController">
+                <tableViewController title="DataFeed" clearsSelectionOnViewWillAppear="NO" id="IPX-or-gZQ" customClass="FeedViewController" customModule="Dataflödet" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" style="plain" rowHeight="78" sectionHeaderHeight="28" sectionFooterHeight="28" id="rze-QQ-MBa">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="separatorColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="none" indentationWidth="0.0" shouldIndentWhileEditing="NO" reuseIdentifier="tablefeedcell" rowHeight="78" id="v91-If-Ypm" customClass="FeedCell">
-                                <rect key="frame" x="0.0" y="28" width="600" height="100"/>
+                            <tableViewCell clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="none" indentationWidth="0.0" shouldIndentWhileEditing="NO" reuseIdentifier="tablefeedcell" rowHeight="78" id="v91-If-Ypm" customClass="FeedCell" customModule="Dataflödet" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="600" height="78"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" tableViewCell="v91-If-Ypm" id="bXH-gm-cYN">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="99.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="77.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n2W-jQ-4Zp">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3L3-4U-294">
                                             <rect key="frame" x="-42" y="-21" width="42" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                            <color key="textColor" red="0.93809878830000004" green="0.0" blue="0.42589530349999999" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="249" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Time" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n2W-jQ-4Zp">
+                                            <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -57,17 +65,12 @@
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3L3-4U-294">
-                                            <rect key="frame" x="-42" y="-21" width="42" height="21"/>
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
-                                            <color key="textColor" red="0.93809878830000004" green="0.0" blue="0.42589530349999999" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="3L3-4U-294" firstAttribute="top" secondItem="bXH-gm-cYN" secondAttribute="topMargin" id="1PI-0h-e4b"/>
-                                        <constraint firstItem="3L3-4U-294" firstAttribute="baseline" secondItem="n2W-jQ-4Zp" secondAttribute="baseline" id="Bdd-Mo-FFg"/>
+                                        <constraint firstItem="n2W-jQ-4Zp" firstAttribute="baseline" secondItem="3L3-4U-294" secondAttribute="firstBaseline" id="Bdd-Mo-FFg"/>
                                         <constraint firstItem="QER-bf-2Yj" firstAttribute="leading" secondItem="bXH-gm-cYN" secondAttribute="leadingMargin" constant="8" id="Shw-ir-KGk"/>
+                                        <constraint firstItem="n2W-jQ-4Zp" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="3L3-4U-294" secondAttribute="trailing" constant="8" id="agR-kX-zeS"/>
                                         <constraint firstItem="QER-bf-2Yj" firstAttribute="trailing" secondItem="bXH-gm-cYN" secondAttribute="trailingMargin" constant="-8" id="eHf-RC-FGX"/>
                                         <constraint firstItem="QER-bf-2Yj" firstAttribute="top" secondItem="3L3-4U-294" secondAttribute="bottom" constant="8" id="jfq-7r-klC"/>
                                         <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="QER-bf-2Yj" secondAttribute="bottom" id="krb-xI-4fU"/>
@@ -76,44 +79,46 @@
                                     </constraints>
                                     <variation key="default">
                                         <mask key="subviews">
+                                            <exclude reference="3L3-4U-294"/>
                                             <exclude reference="n2W-jQ-4Zp"/>
                                             <exclude reference="QER-bf-2Yj"/>
-                                            <exclude reference="3L3-4U-294"/>
                                         </mask>
                                         <mask key="constraints">
                                             <exclude reference="1PI-0h-e4b"/>
-                                            <exclude reference="Bdd-Mo-FFg"/>
                                             <exclude reference="vTC-LV-Z38"/>
                                             <exclude reference="Shw-ir-KGk"/>
                                             <exclude reference="eHf-RC-FGX"/>
                                             <exclude reference="jfq-7r-klC"/>
                                             <exclude reference="krb-xI-4fU"/>
+                                            <exclude reference="Bdd-Mo-FFg"/>
+                                            <exclude reference="agR-kX-zeS"/>
                                             <exclude reference="zly-v0-MFs"/>
                                         </mask>
                                     </variation>
                                     <variation key="heightClass=regular-widthClass=compact">
                                         <mask key="subviews">
+                                            <include reference="3L3-4U-294"/>
                                             <include reference="n2W-jQ-4Zp"/>
                                             <include reference="QER-bf-2Yj"/>
-                                            <include reference="3L3-4U-294"/>
                                         </mask>
                                         <mask key="constraints">
                                             <include reference="1PI-0h-e4b"/>
-                                            <include reference="Bdd-Mo-FFg"/>
                                             <include reference="vTC-LV-Z38"/>
                                             <include reference="Shw-ir-KGk"/>
                                             <include reference="eHf-RC-FGX"/>
                                             <include reference="jfq-7r-klC"/>
                                             <include reference="krb-xI-4fU"/>
+                                            <include reference="Bdd-Mo-FFg"/>
+                                            <include reference="agR-kX-zeS"/>
                                             <include reference="zly-v0-MFs"/>
                                         </mask>
                                     </variation>
                                 </tableViewCellContentView>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <connections>
-                                    <outlet property="date" destination="n2W-jQ-4Zp" id="Fho-oY-zhZ"/>
-                                    <outlet property="text" destination="QER-bf-2Yj" id="ZDQ-em-cYw"/>
-                                    <outlet property="title" destination="3L3-4U-294" id="0fK-kY-Tbx"/>
+                                    <outlet property="content" destination="QER-bf-2Yj" id="DOX-ao-1k9"/>
+                                    <outlet property="time" destination="n2W-jQ-4Zp" id="ha1-HQ-jal"/>
+                                    <outlet property="title" destination="3L3-4U-294" id="dVA-RX-LG1"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
