--- a/Greip/Base.lproj/Main.storyboard
+++ b/Greip/Base.lproj/Main.storyboard
@@ -16,6 +16,7 @@
                         <viewControllerLayoutGuide type="bottom" id="h9G-j5-6Vm"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="J68-na-23m">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i1J-JB-nvk">
@@ -23,12 +24,9 @@
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="40"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
-                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="76" y="339" width="248" height="121"/>
-                                </variation>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.93809878830000004" green="0.0" blue="0.42589530349999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.90980392156862744" green="0.23921568627450979" blue="0.51764705882352935" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="i1J-JB-nvk" firstAttribute="centerY" secondItem="J68-na-23m" secondAttribute="centerY" id="1fn-Aa-Bix"/>
                             <constraint firstItem="i1J-JB-nvk" firstAttribute="centerX" secondItem="J68-na-23m" secondAttribute="centerX" id="uaj-dV-RMt"/>
@@ -55,18 +53,18 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="o4J-iI-94q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2124" y="-496.5"/>
+            <point key="canvasLocation" x="-1930.5" y="-496.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="1o6-VA-5gX">
             <objects>
                 <navigationController storyboardIdentifier="DataFeedNC" hidesBottomBarWhenPushed="YES" useStoryboardIdentifierAsRestorationIdentifier="YES" id="HUN-lU-pb1" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="6oF-13-7Qs">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" translucent="NO" id="6oF-13-7Qs">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <color key="barTintColor" red="0.93333333330000001" green="0.068077592926315794" blue="0.41946745600263158" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" red="0.90980392160000001" green="0.23921568630000001" blue="0.51764705879999995" alpha="1" colorSpace="calibratedRGB"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         </textAttributes>
@@ -89,7 +87,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="separatorColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="none" indentationWidth="0.0" shouldIndentWhileEditing="NO" reuseIdentifier="tablefeedcell" rowHeight="78" id="v91-If-Ypm" customClass="FeedCell" customModule="Dataflödet" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="0.0" shouldIndentWhileEditing="NO" reuseIdentifier="tablefeedcell" rowHeight="78" id="v91-If-Ypm" customClass="FeedCell" customModule="Dataflödet" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="600" height="78"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" tableViewCell="v91-If-Ypm" id="bXH-gm-cYN">
@@ -104,7 +102,7 @@
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3L3-4U-294">
                                             <rect key="frame" x="-42" y="-21" width="42" height="21"/>
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                             <color key="textColor" red="0.93809878830000004" green="0.0" blue="0.42589530349999999" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -153,6 +151,7 @@
                                 <connections>
                                     <outlet property="content" destination="QER-bf-2Yj" id="DOX-ao-1k9"/>
                                     <outlet property="title" destination="3L3-4U-294" id="dVA-RX-LG1"/>
+                                    <segue destination="m1S-WO-jqr" kind="show" id="Pev-AG-dml"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -166,7 +165,98 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IB7-dG-z3a" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-418.5" y="-496.5"/>
+            <point key="canvasLocation" x="-442.5" y="-496.5"/>
+        </scene>
+        <!--DetailView-->
+        <scene sceneID="m0F-Ft-vUA">
+            <objects>
+                <viewController storyboardIdentifier="DetailView" title="DetailView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="m1S-WO-jqr" customClass="PostDetailVC" customModule="Dataflödet" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="DfN-B1-oHI"/>
+                        <viewControllerLayoutGuide type="bottom" id="y7N-PP-MhE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" id="QEn-wF-Yvn">
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G9v-Tr-mlA">
+                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                <color key="textColor" red="0.93809878830000004" green="0.0" blue="0.42589530349999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="middleTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2J5-q9-Q4y">
+                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pwD-Vz-YJN">
+                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" red="0.6426779628" green="0.85051387550000002" blue="0.97328758240000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="G9v-Tr-mlA" firstAttribute="top" secondItem="DfN-B1-oHI" secondAttribute="bottom" constant="16" id="1a0-xm-ozA"/>
+                            <constraint firstItem="pwD-Vz-YJN" firstAttribute="top" secondItem="2J5-q9-Q4y" secondAttribute="bottom" constant="8" id="55m-W3-LlJ"/>
+                            <constraint firstItem="2J5-q9-Q4y" firstAttribute="top" secondItem="G9v-Tr-mlA" secondAttribute="bottom" constant="16" id="8f4-Bj-JT2"/>
+                            <constraint firstItem="G9v-Tr-mlA" firstAttribute="trailing" secondItem="QEn-wF-Yvn" secondAttribute="trailingMargin" id="XaQ-AZ-fwD"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="2J5-q9-Q4y" secondAttribute="trailing" id="cRX-OI-lRl"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="2J5-q9-Q4y" secondAttribute="leading" id="h6f-cI-dSr"/>
+                            <constraint firstItem="pwD-Vz-YJN" firstAttribute="trailing" secondItem="QEn-wF-Yvn" secondAttribute="trailingMargin" id="keb-4y-O80"/>
+                            <constraint firstItem="pwD-Vz-YJN" firstAttribute="leading" secondItem="QEn-wF-Yvn" secondAttribute="leadingMargin" id="lGg-mW-BUD"/>
+                            <constraint firstItem="G9v-Tr-mlA" firstAttribute="leading" secondItem="QEn-wF-Yvn" secondAttribute="leadingMargin" id="ubK-Rk-FGp"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="G9v-Tr-mlA"/>
+                                <exclude reference="2J5-q9-Q4y"/>
+                                <exclude reference="pwD-Vz-YJN"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="1a0-xm-ozA"/>
+                                <exclude reference="8f4-Bj-JT2"/>
+                                <exclude reference="XaQ-AZ-fwD"/>
+                                <exclude reference="ubK-Rk-FGp"/>
+                                <exclude reference="cRX-OI-lRl"/>
+                                <exclude reference="h6f-cI-dSr"/>
+                                <exclude reference="55m-W3-LlJ"/>
+                                <exclude reference="keb-4y-O80"/>
+                                <exclude reference="lGg-mW-BUD"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="G9v-Tr-mlA"/>
+                                <include reference="2J5-q9-Q4y"/>
+                                <include reference="pwD-Vz-YJN"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="1a0-xm-ozA"/>
+                                <include reference="8f4-Bj-JT2"/>
+                                <include reference="XaQ-AZ-fwD"/>
+                                <include reference="ubK-Rk-FGp"/>
+                                <include reference="cRX-OI-lRl"/>
+                                <include reference="h6f-cI-dSr"/>
+                                <include reference="55m-W3-LlJ"/>
+                                <include reference="keb-4y-O80"/>
+                                <include reference="lGg-mW-BUD"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <navigationItem key="navigationItem" title="Dataflödet" id="pcI-eX-pe2"/>
+                    <connections>
+                        <outlet property="content" destination="2J5-q9-Q4y" id="5wi-Ek-ibE"/>
+                        <outlet property="meta" destination="pwD-Vz-YJN" id="cNt-9X-fkL"/>
+                        <outlet property="postTitle" destination="G9v-Tr-mlA" id="3nb-UO-ahr"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VEX-Fv-Bvr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="282" y="-496.5"/>
         </scene>
     </scenes>
 </document>
